--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -21,7 +21,14 @@
 
 \section{Introduction}
 
-todo
+In recent years, mobile communication tools have gained massively in
+popularity. Some of these applications have more hundreds of millions of
+downloads. This is important for forensics purposes because there are
+reasonable odds that a suspect has installed and possibly used one such
+application. For example, {\it imo.im} has around half a billion installs and
+requests location permissions: if this application logs one's location, this
+could be helpful for an investigation to either confirm alibies or to call
+false ones into question.
 
 
 \section{Research Questions}
