Added research Q and preliminary subQ

--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -27,14 +27,16 @@ todo
 \section{Research Questions}
 
 Our main research question is:
-{\it todo}
+{\it What locally stored information can be gathered from the android imo messenger app?}
 
 \vspace{0.5cm}
 
 This main research question divides in five sub-questions:
 
 \begin{enumerate}
-	\item todo 
+	\item Message data
+	\item Location data
+	\item Cached files/images
 \end{enumerate}
 
 
