--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -25,7 +25,7 @@ In recent years, mobile communication tools have gained massively in
 popularity. Some of these applications have more hundreds of millions of
 downloads. This is important for forensics purposes because there are
 reasonable odds that a suspect has installed and possibly used one such
-application. For example, {\it imo.im} has around half a billion installs and
+application. For example, {\it imo.im} has over half a billion installs and
 requests location permissions: if this application logs one's location, this
 could be helpful for an investigation to either confirm alibies or to call
 false ones into question.
@@ -34,7 +34,7 @@ false ones into question.
 \section{Research Questions}
 
 Our main research question is:
-{\it What locally stored information can be gathered from the android imo messenger app?}
+{\it What locally stored information can be gathered from the Android imo messenger app?}
 
 \vspace{0.5cm}
 
@@ -49,7 +49,8 @@ This main research question divides in five sub-questions:
 
 \section{Scope}
 
-todo
+We limit ourselves to the investigation of the imo Android app and do not look
+into the iOS, MacOS or Windows versions.  
 
 
 \section{Methods}
