Added ethical implications

--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -77,7 +77,9 @@ disk image.
 
 \section{Ethical Considerations}
 
-todo
+For this project we will use a test environment to examine the data that can be
+extracted from the imo Android app, we will not be using any real user data and
+therefore do not invade the privacy of any real imo users. 
 
 
 \section{Related work}
