--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -82,7 +82,10 @@ todo
 
 \section{Related work}
 
-todo
+There appears to be no previous, academic work into the security or forensics
+implications of imo. The only consideration in primary literature appears to be
+an article from 2012 which generally reviews group messaging
+services\cite{zhu}.
 
 
 \printbibliography
