Title; research question small edit

--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -9,7 +9,10 @@
     backend=bibtex]{biblatex}
 \bibliography{references.bib}
 
-\title{TODO TITLE \\
+\setlength{\parindent}{0pt}
+\setlength{\parskip}{\baselineskip}
+
+\title{Using {\it imo.im} in forensic investigations \\
 	\vspace{0.3cm}
 	{\large CCF Project Proposal}
 }
@@ -34,9 +37,7 @@ false ones into question.
 \section{Research Questions}
 
 Our main research question is:
-{\it What locally stored information can be gathered from the Android imo messenger app?}
-
-\vspace{0.5cm}
+{\it What information can be gathered from the `imo' messenger app for Android?}
 
 This main research question divides in five sub-questions:
 
