--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -79,7 +79,7 @@ disk image.
 
 For this project we will use a test environment to examine the data that can be
 extracted from the imo Android app, we will not be using any real user data and
-therefore do not invade the privacy of any real imo users. 
+therefore do not invade or compromise the privacy of any real imo users. 
 
 
 \section{Related work}
