planning: checked how much time we have

--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -72,6 +72,9 @@ disk image.
 	\textbf{Week} & \textbf{Activity} \\
 	\hline 1 & todo \\
 	\hline 2 & todo \\
+	\hline 3 & todo \\
+	\hline 4 & todo \\
+	\hline 5 & Finailze report and prepare presentation \\
 	\hline
 \end{tabular}
 
