--- a/report/references.bib
+++ b/report/references.bib
@@ -9,3 +9,22 @@
   journal={arXiv preprint arXiv:1304.4915},
   year={2013}
 }
+@article{walnycky2015network,
+  title={Network and device forensic analysis of android social-messaging applications},
+  author={Walnycky, Daniel and Baggili, Ibrahim and Marrington, Andrew and Moore, Jason and Breitinger, Frank},
+  journal={Digital Investigation},
+  volume={14},
+  pages={S77--S84},
+  year={2015},
+  publisher={Elsevier}
+}
+@article{anglano2014forensic,
+  title={Forensic analysis of WhatsApp Messenger on Android smartphones},
+  author={Anglano, Cosimo},
+  journal={Digital Investigation},
+  volume={11},
+  number={3},
+  pages={201--213},
+  year={2014},
+  publisher={Elsevier}
+}
