Changed section labels (use logical names, not numbers: numbers/ordering might be changed)

--- a/report/report.tex
+++ b/report/report.tex
@@ -64,13 +64,13 @@ purposes. If the application indeed tracks and stores a log of a user's location
 data, such data could be valuable in court to for instance validate or
 invalidate a suspect's alibi.
 
-The remainder of this paper is structured as follows: Section \ref{sec:II}
-describes our main research question and the defined sub-questions. In Section
-\ref{sec:III} we discuss the ethical implications of our work. Section
-\ref{sec:IV} gives an overview of the prior work done in this area of research.
-%TODO
+The remainder of this paper is structured as follows: Section
+\ref{sec:researchq} describes our main research question and the defined
+sub-questions. In Section \ref{sec:ethics} we discuss the ethical implications
+of our work. Section \ref{sec:relwork} gives an overview of the prior work done
+in this area of research. %TODO
 
-\section{Research Questions}\label{sec:II}
+\section{Research Questions}\label{sec:researchq}
 
 Our main research question is:
 {\it What information can be gathered from the `imo' messenger app for Android?}
@@ -85,7 +85,7 @@ This main research question divides in four sub-questions:
 \end{enumerate}
 
 
-\section{Ethical Considerations}\label{sec:III}
+\section{Ethical Considerations}\label{sec:ethics}
 
 For this paper we will use a test environment to examine the data that can be
 extracted from the imo android app. We will not be using any real user data and
@@ -93,7 +93,7 @@ use only designated test devices to make sure we do not invade or compromise the
 privacy of any real imo users.
 
 
-\section{Related work}\label{sec:IV}
+\section{Related work}\label{sec:relwork}
 
 No prior work has been done on the imo messaging app for any platform, the only
 mention of imo in academic literature is in the paper by \citeauthor{zhu}, which
