--- a/report/report.tex
+++ b/report/report.tex
@@ -123,7 +123,7 @@ storage in a forensic investigation for each of the 20 discussed applications.
 
 
 
-\section{Method}\label{sec:V}
+\section{Method}\label{sec:method}
 
 %todo investigate deleted messages, appear in database?
 %todo investigate logout etc
