Report: communication format

--- a/report/references.bib
+++ b/report/references.bib
@@ -28,3 +28,10 @@
   year={2014},
   publisher={Elsevier}
 }
+@misc{moz-tls,
+  title = {Security/Server Side TLS},
+  author = {Mozilla},
+  year = 2018,
+  url = {https://wiki.mozilla.org/Security/Server_Side_TLS}
+}
+
