--- a/report/report.tex
+++ b/report/report.tex
@@ -116,8 +116,12 @@ contact phone numbers.
 
 \citeauthor{walnycky2015network} conduct an extensive investigation of 20
 popular Android messaging applications \cite{walnycky2015network}. In their
-paper they investigate what data is acquirable from the mobile device's local
-storage in a forensic investigation for each of the 20 discussed applications.
+paper they investigate what data is can be retrieved by investigating the mobile
+device's local storage, the applications' server storage and network traffic
+analysis in a forensic investigation for each application. They state that 4 of
+the applications leaked no data when subjected to their investigative methods.
+However, 16 applications did leak data either through network communication or
+local/server storage.
 
 
 
