paper: overview of imo section added; small intro text edits; elaborated on local storage and started a section on what happens upon deletion; updated communications section

--- a/report/references.bib
+++ b/report/references.bib
@@ -34,4 +34,11 @@
   year = 2018,
   url = {https://wiki.mozilla.org/Security/Server_Side_TLS}
 }
+@misc{wiki-gplay-popular,
+  author = "Wikipedia contributors",
+  title = "List of most downloaded Google Play applications --- Wikipedia{,} The Free Encyclopedia",
+  year = "2018",
+  url = "\url{https://en.wikipedia.org/w/index.php?title=List_of_most_downloaded_Google_Play_applications&oldid=828439408}",
+  note = "[Online; accessed 6-March-2018]"
+}
 
